--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "lodash": "^4.0.0",
     "prop-types": "^15.5.10",
+    "react-native-gesture-handler": "^1.4.1",
     "xdate": "^0.8.0"
   },
   "devDependencies": {
