make gesture handler peer dependency

--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
   "dependencies": {
     "lodash": "^4.0.0",
     "prop-types": "^15.5.10",
-    "react-native-gesture-handler": "^1.4.1",
     "xdate": "^0.8.0"
+  },
+  "peerDependencies": {
+    "react": "*",
+    "react-native": "*",
+    "react-native-gesture-handler": "*"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
